--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jonathan Word - Frontend Portfolio</title>
   </head>
-  <body class="m-0 overflow-x-hidden bg-main">
+  <body class="bg-main">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
