--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Jonathan Word - Frontend Portfolio</title>
   </head>
   <body class="bg-main">
+    <form name="Contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
